# Proxyra

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  complete_project.md  render.yaml  vercel.json
backend/: Cargo.toml
backend/src/: main.rs
frontend/: .env.production  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  DashboardApp.tsx  index.css  main.tsx
frontend/src/components/: LogsTable.tsx  MetricCard.tsx  ProxyForm.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  LogsPage.tsx  ProxiesPage.tsx
