[package]
name = "proxyra-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
reqwest = { version = "0.12.9", default-features = false, features = ["brotli", "deflate", "gzip", "http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5.4"
kuchiki = "0.8.1"
dotenvy = "0.15"
chrono = "0.4"
